updated header's btn css

--- a/html2.html
+++ b/html2.html
@@ -15,7 +15,7 @@
             <h1 data-text="Portfolio"><span>Portfolio</span></h1>
         </div>
         <div class = "buttun">
-            <a class="btn btn-dark btn-lg btn2" href="#" role="button">who's me?</a>
+            <a class = "btn-2" href="#" role="button">who's me?</a>
         </div>
     </div>
 </body>
