--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
                 <h1 data-text="Portfolio"><span>Portfolio</span></h1>
             </div>
             <div class = "buttun">
-                <a class = "btn-2" href="#" role="button">who's me?</a>
+                <a class = "btn-2" href="#sample" role="button">who's me?</a>
             </div>
         </div>
     </header>
-    <nav class="navbar navbar-light bg-light navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-light bg-light navbar-dark bg-dark sticky-top">
       <a class="navbar-brand" href="#">Portfolio</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,13 +29,20 @@
       <div class="collapse navbar-collapse justify-content-end " id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">HOME <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Service</a>
+            <a class="nav-link" href="#sample">SAMPLE</a>
           </li>
       </div>
-    </nav>   
+    </nav>
+    
+    <div class = "body" id = "sample">
+        <div class = "container">
+            <h1>This is sample</h1>
+            <p>thank you for coming!</p>
+        </div>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
