--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href = "style.css" type ="text/css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -12,6 +13,11 @@
 <body>
     <header>
         <div class = "header">
+            <div class = "title">
+              <h2 class = "name">I'm　　Taichi   </h2>
+              <h2 class = "programer">　　　Programer</h2>
+              <h2 class = "charenger">　　　Charenger</h2>
+            </div>
             <div class = "header-title">
                 <h1 data-text="Portfolio"><span>Portfolio</span></h1>
             </div>
