--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <div class = "header">
             <div class = "title">
-              <h2 class = "name">I'm　　Taichi   </h2>
-              <h2 class = "programer">　　　Programer</h2>
-              <h2 class = "charenger">　　　Charenger</h2>
+              <h2 class = "name">I'm.....Taichi Watabe</h2>
+              <h2 class = "programer">..........Programer......</h2>
+              <h2 class = "charenger">..........Charenger......</h2>
             </div>
             <div class = "header-title">
                 <h1 data-text="Portfolio"><span>Portfolio</span></h1>
